# plonky2-solidity-verifier

./: Cargo.toml  README.md  test.sh  test_dummy_proof_with_public_inputs.sh  test_dummy_proof_without_public_inputs.sh  test_recursive_proof_without_public_inputs.sh
contract/: hardhat.config.ts  package-lock.json  package.json
contract/contracts/: Challenger.sol  ChallengerTest.sol  GoldilocksExt.sol  GoldilocksField.sol  Plonk.sol  TestChallenger.sol  TestGoldilocks.sol  TestPlonk.sol
contract/scripts/: deploy.ts
contract/test/: Verifier.ts  test.ts
src/: config.rs  lib.rs  template.sol  template_gates.sol  template_main.sol  template_proof.sol  verifier.rs
