[package]
name = "plonky2_solidity_verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = { git = "https://github.com/polymerdao/plonky2", rev = "f7872734" }
anyhow = "1.0.40"
log = "0.4.14"
env_logger = "0.9.0"
base64 = "0.13.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
keccak-hash = "0.8.0"

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3

[profile.test]
opt-level = 3
